--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "googleapis": "^149.0.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "resend": "^4.5.1",
