feat(favicon): add favicon using LocalLoop logo
- Created favicon in multiple sizes (16x16, 32x32, any)
- Generated SVG-based favicons from existing logo design
- Updated manifest.json to include icon references
- Added fallback favicon.ico for browser compatibility

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,5 +13,22 @@
         "social",
         "lifestyle",
         "productivity"
+    ],
+    "icons": [
+        {
+            "src": "/favicon-16x16.svg",
+            "sizes": "16x16",
+            "type": "image/svg+xml"
+        },
+        {
+            "src": "/favicon-32x32.svg",
+            "sizes": "32x32",
+            "type": "image/svg+xml"
+        },
+        {
+            "src": "/icon.svg",
+            "sizes": "any",
+            "type": "image/svg+xml"
+        }
     ]
 }
