chore: add claude files to gitignore and remove from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,9 @@ lighthouse-report/
 .env.development.local
 .env.test.local
 .env.production.local
+settings.local.json
+.claude/
+claude/
 
 # ESLint cache
 .eslintcache
